--- a/Komu/Komu.vcxproj.filters
+++ b/Komu/Komu.vcxproj.filters
@@ -4,6 +4,9 @@
     <Filter Include="Komu">
       <UniqueIdentifier>{A116887C-8D4D-890D-363A-6F102250050F}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Komu\Events">
+      <UniqueIdentifier>{65E3AF1C-D198-2812-5A8D-22E9C6411F16}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Komu.h" />
@@ -15,6 +18,18 @@
     </ClInclude>
     <ClInclude Include="src\Komu\EntryPoint.h">
       <Filter>Komu</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Komu\Events\ApplicationEvent.h">
+      <Filter>Komu\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Komu\Events\Event.h">
+      <Filter>Komu\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Komu\Events\KeyEvent.h">
+      <Filter>Komu\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Komu\Events\MouseEvent.h">
+      <Filter>Komu\Events</Filter>
     </ClInclude>
     <ClInclude Include="src\Komu\Log.h">
       <Filter>Komu</Filter>
