--- a/Komu/Komu.vcxproj.filters
+++ b/Komu/Komu.vcxproj.filters
@@ -7,6 +7,12 @@
     <Filter Include="Komu\Events">
       <UniqueIdentifier>{65E3AF1C-D198-2812-5A8D-22E9C6411F16}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Platform">
+      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\Windows">
+      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Komu.h" />
@@ -34,6 +40,12 @@
     <ClInclude Include="src\Komu\Log.h">
       <Filter>Komu</Filter>
     </ClInclude>
+    <ClInclude Include="src\Komu\Window.h">
+      <Filter>Komu</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
+      <Filter>Platform\Windows</Filter>
+    </ClInclude>
     <ClInclude Include="src\kmpch.h" />
   </ItemGroup>
   <ItemGroup>
@@ -42,6 +54,9 @@
     </ClCompile>
     <ClCompile Include="src\Komu\Log.cpp">
       <Filter>Komu</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
+      <Filter>Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\kmpch.cpp" />
   </ItemGroup>
